--- a/9_Image_Classification_Part2_Convolutional_Neural_Networks.ipynb
+++ b/9_Image_Classification_Part2_Convolutional_Neural_Networks.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f9747075",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Preprocessing-and-Data-Loading\" data-toc-modified-id=\"Preprocessing-and-Data-Loading-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Preprocessing and Data Loading</a></span><ul class=\"toc-item\"><li><span><a href=\"#Import-necessary-modules\" data-toc-modified-id=\"Import-necessary-modules-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Import necessary modules</a></span></li><li><span><a href=\"#Some-Comments-on-Preprocessing\" data-toc-modified-id=\"Some-Comments-on-Preprocessing-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Some Comments on Preprocessing</a></span></li><li><span><a href=\"#Loading-the-Data-via-Pytorch-DataLoader\" data-toc-modified-id=\"Loading-the-Data-via-Pytorch-DataLoader-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Loading the Data via Pytorch DataLoader</a></span></li></ul></li><li><span><a href=\"#Build-a-Convolutional-Neural-Network(CNN)-Architecture\" data-toc-modified-id=\"Build-a-Convolutional-Neural-Network(CNN)-Architecture-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Build a Convolutional Neural Network(CNN) Architecture</a></span><ul class=\"toc-item\"><li><span><a href=\"#What-CNNs-Learn\" data-toc-modified-id=\"What-CNNs-Learn-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>What CNNs Learn</a></span></li></ul></li><li><span><a href=\"#Train-and-Test\" data-toc-modified-id=\"Train-and-Test-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Train and Test</a></span></li><li><span><a href=\"#Post-Processing\" data-toc-modified-id=\"Post-Processing-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Post-Processing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Display-The-Predictions-with-Ground-Truths\" data-toc-modified-id=\"Display-The-Predictions-with-Ground-Truths-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Display The Predictions with Ground Truths</a></span></li><li><span><a href=\"#Evaluate-the-Performance-Metrics\" data-toc-modified-id=\"Evaluate-the-Performance-Metrics-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Evaluate the Performance Metrics</a></span><ul class=\"toc-item\"><li><span><a href=\"#Confusion-Matrix\" data-toc-modified-id=\"Confusion-Matrix-4.2.1\"><span class=\"toc-item-num\">4.2.1&nbsp;&nbsp;</span>Confusion Matrix</a></span></li><li><span><a href=\"#Overall-Accuracy\" data-toc-modified-id=\"Overall-Accuracy-4.2.2\"><span class=\"toc-item-num\">4.2.2&nbsp;&nbsp;</span>Overall Accuracy</a></span></li><li><span><a href=\"#Recall\" data-toc-modified-id=\"Recall-4.2.3\"><span class=\"toc-item-num\">4.2.3&nbsp;&nbsp;</span>Recall</a></span></li><li><span><a href=\"#Precision\" data-toc-modified-id=\"Precision-4.2.4\"><span class=\"toc-item-num\">4.2.4&nbsp;&nbsp;</span>Precision</a></span></li><li><span><a href=\"#F1-Score\" data-toc-modified-id=\"F1-Score-4.2.5\"><span class=\"toc-item-num\">4.2.5&nbsp;&nbsp;</span>F1-Score</a></span></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "841c16ed",
    "metadata": {},
    "source": [
@@ -588,7 +599,7 @@
    "id": "8d5eab4d",
    "metadata": {},
    "source": [
-    "### What CNN Learn"
+    "### What CNNs Learn"
    ]
   },
   {
@@ -1369,7 +1380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1397,7 +1408,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
