few notes on MLR

--- a/9_Image_Recognition_Part2_Convolutional_Neural_Networks.ipynb
+++ b/9_Image_Recognition_Part2_Convolutional_Neural_Networks.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "markdown",
    "id": "27b3152a",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Introduction"
    ]
@@ -24,9 +22,7 @@
   {
    "cell_type": "markdown",
    "id": "400264ff",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- This is Part-2 of our image recognition study. Here, we will build a simple CNN model.\n",
     "- In addition to Part-1, we added few more functions to visualize CNN filters and feature maps. This is a great demonstration to see why even a simple CNN model outperforms FNN model in vision tasks  "
@@ -35,9 +31,7 @@
   {
    "cell_type": "markdown",
    "id": "841c16ed",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Preprocessing and Data Loading"
    ]
@@ -45,10 +39,7 @@
   {
    "cell_type": "markdown",
    "id": "235d1bb3",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Import necessary modules"
    ]
@@ -58,8 +49,7 @@
    "execution_count": 1,
    "id": "0b91070d",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -96,8 +86,7 @@
    "execution_count": 2,
    "id": "7e1cede7",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -141,10 +130,7 @@
   {
    "cell_type": "markdown",
    "id": "4985ccbc",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Some Comments on Preprocessing "
    ]
@@ -152,9 +138,7 @@
   {
    "cell_type": "markdown",
    "id": "f83247b2",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "-  We will be working on House_Room dataset [here](https://www.kaggle.com/robinreni/house-rooms-image-dataset). Task is to classify five room types of houses. \n",
     "-  Original dataset has around 5000 images of size 224x224 RGB and does not have train-test folders. It is composed of just root directory and class folders in it. We would like to create subset of it.\n",
@@ -167,10 +151,7 @@
   {
    "cell_type": "markdown",
    "id": "089ff5da",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Loading the Data via Pytorch DataLoader"
    ]
@@ -178,9 +159,7 @@
   {
    "cell_type": "markdown",
    "id": "3ac547af",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Pytorch provides several classes which make the data loading easy and fast.\n",
     "- It is essential to perform data augmentation on the training data. Core idea is to feed different batch of modified images to the model. Please carefully read the section 'Improving Neural Networks' in the report in our repository. \n",
@@ -191,9 +170,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bf49af5e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -203,7 +180,6 @@
    "id": "bc28668f",
    "metadata": {
     "code_folding": [],
-    "hidden": true,
     "run_control": {
      "marked": false
     }
@@ -232,8 +208,7 @@
    "execution_count": 4,
    "id": "29718de3",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -261,9 +236,7 @@
   {
    "cell_type": "markdown",
    "id": "2dfeda50",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The following output is important. Since we set batch_size = 10, we have 10 images in each 'load' and 10 labels corresponding to each of these images."
    ]
@@ -272,9 +245,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "a2f12f6a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -295,9 +266,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dfb37fdd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,8 +290,7 @@
    "metadata": {
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -349,8 +317,7 @@
    "execution_count": 8,
    "id": "3bb73c08",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -386,9 +353,7 @@
   {
    "cell_type": "markdown",
    "id": "007fd672",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- A common practice is to check the class distributions. It is important to have almost the same number of images from each class type. Otherwise, the model will struggle to learn the minority class, in this case 'Kitchen'\n",
     "- There are very well established methods(oversampling, use class weights etc) to deal with this issue but we will reserve them for another lecture."
@@ -399,8 +364,7 @@
    "execution_count": 9,
    "id": "ba3a585c",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [
     {
@@ -430,9 +394,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0479031e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1638,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
